<resources>
    <string name="app_name">DAM_5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_hunt">Hunt</string>

    <!--SEARCH STRINGS-->
    <string name="search_input">Look for your friends!</string>
    <string name="search_error_message">There was an error while communicating with the database. Try again later please</string>
    <string name="search_error_title">Error</string>


    <!--HUNT STRINGS-->
    <string name="new_hunt_dialog_title">Start a new hunt</string>
    <string name="new_hunt_title_hint">Choose a name for your hunt!</string>
    <string name="new_hunt_title_text">Hunt title</string>
    <string name="treasures_counter">Treasures left to pin : </string>
    <string name="title_activity_new_hunt_map">NewHuntMapActivity</string>
    <string name="new_hunt_buttonTitle">Add coordinates</string>

    <string name="new_pin_message">Adding pin</string>
    <string name="new_pin_title">Do you want to add a pin here?</string>


    <!--HOME-->
    <string name="home_huntNot">You aren\'t currently participating in a hunt. You can join one by clicking in the bottom right corner</string>
    <string name="home_huntInProgress">There is currently a hunt in progress. Click here to share the code with friends</string>

    <!--JOIN HUNT-->
    <string name="dialog_join_hunt_title">Insert the code!</string>
    <string name="hunt_over_message">The hunt you entered exists, but it has already finished!</string>
    <string name="hunt_no_exist">The code is invalid, try again</string>


    <!--TOKENS-->
    <string name="avatar_token">NmU5MzJhM2ItMzkyNS00YjQ3LWEyOWMtZTEyYmQwYzUyMDI5</string>

</resources>